--- a/_assets/sass/components/heading-feature.scss
+++ b/_assets/sass/components/heading-feature.scss
@@ -12,7 +12,7 @@
 }
 
 .c-heading-feature__subtitle {
-	max-width: 44rem;
+	max-width: $wrap-medium;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 0;
