--- a/iCAN.Web/Views/Partials/Components/Sitemap.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Sitemap.cshtml
@@ -36,7 +36,7 @@
 
     private static bool DocumentTypeIsNotIgnored(IPublishedContent arg)
     {
-        const string ignoredDocTypes = "errorPage,notFound";
+        const string ignoredDocTypes = "errorPage,notFound,pressRelease,generalNews,post";
 
         return ignoredDocTypes.Split(',').All(docType => docType != arg.DocumentTypeAlias);
     }
