--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -90,4 +90,5 @@
 @import 'trumps/free-content',
 		'trumps/home',
 		'trumps/contact',
-		'trumps/hero';
+		'trumps/hero',
+		'trumps/latest-news';
