--- a/iCAN.Web/Views/Master.cshtml
+++ b/iCAN.Web/Views/Master.cshtml
@@ -20,8 +20,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         @Html.Partial("~/Views/Partials/Meta/SEO.cshtml")
-		<link rel="stylesheet" href="/assets/css/style.css">
-        <script src="/assets/js/head.js"></script>
+		<link rel="stylesheet" href="/assets/css/style.a51778d2.css">
+        <script src="/assets/js/head.66bd67d2.js"></script>
 		<link rel="stylesheet" href="https://use.typekit.net/mmc8vjo.css">
 		<link rel="shortcut icon" href="/img/favicons/favicon-96x96.png" type="image/png">
 		<link rel="manifest" href="/manifest.json" />
@@ -35,7 +35,7 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 		<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
-		<script src="/assets/js/main.js"></script>
+		<script src="/assets/js/main.49c3db86.js"></script>
 		@RenderSection("Scripts", required: false)
     </body>
 </html>
