--- a/iCAN.Web/Views/Partials/Modules/LatestNews.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/LatestNews.cshtml
@@ -11,7 +11,7 @@
 	}
 }
 
-<section class="o-section u-background--light u-clearfix">
+<section class="o-section u-background--light u-clearfix t-latest-news">
 	<div class="o-wrap o-wrap--x-large">
 		@Html.Partial("~/Views/Partials/Components/Heading.cshtml", new HeadingViewModel {
 			Headline = Model.GetPropertyValue<string>("newsHeadline"),
