--- a/iCAN.Web/Views/News.cshtml
+++ b/iCAN.Web/Views/News.cshtml
@@ -67,6 +67,9 @@
 					<h2>Archives</h2>
 					@Html.Partial("~/Views/Partials/Components/LinkListSelect.cshtml", new LinkListViewModel(dateLinks))
 				}
+				<div class="u-space-top--large">
+					@Html.CachedPartial("~/Views/Partials/Components/NewsletterSignup.cshtml", Model, 3600, true)
+				</div>
 			</aside>
 		</div>
 	</div>
