--- a/iCAN.Web/Views/Post.cshtml
+++ b/iCAN.Web/Views/Post.cshtml
@@ -36,7 +36,7 @@
 		<div class="u-intro" itemprop="description">
 			<p>@Model.GetPropertyValue("pageDescription")</p>
 		</div>
-		<div class="s-free-content" itemprop="articleBody">
+		<div class="s-free-content u-clearfix" itemprop="articleBody">
 			@Html.Partial("Modules/PageComponents")
 		</div>
 
