--- a/iCAN.Web/Views/TextPage.cshtml
+++ b/iCAN.Web/Views/TextPage.cshtml
@@ -31,7 +31,9 @@
 			Subtitle = Model.GetPropertyValue<string>("subheadline"),
 			Level = !hasCover ? "h1" : "h2"
 		})
-		@Html.CachedPartial("Modules/PageComponents", Model, 3600, true)
+		<div class="s-free-content u-clearfix">
+			@Html.CachedPartial("Modules/PageComponents", Model, 3600, true)
+		</div>
 	</main>
 </div>
 
