--- a/iCAN.Web/Views/article.cshtml
+++ b/iCAN.Web/Views/article.cshtml
@@ -21,7 +21,7 @@
 				</li>
 			</ul>
 		</header>
-		<div class="s-free-content" itemprop="articleBody">
+		<div class="s-free-content u-clearfix" itemprop="articleBody">
 			@Html.CachedPartial("Modules/PageComponents", Model, 3600, true)
 		</div>
 
