--- a/iCAN.Web/Views/ErrorPage.cshtml
+++ b/iCAN.Web/Views/ErrorPage.cshtml
@@ -33,6 +33,8 @@
 				Level = !hasCover ? "h1" : "h2"
 			})
 		</div>
-		@Html.CachedPartial("Modules/PageComponents", Model, 3600, true)
+		<div class="s-free-content u-clearfix">
+			@Html.CachedPartial("Modules/PageComponents", Model, 3600, true)
+		</div>
 	</main>
 </div>
