Fix featured subheading size issue

--- a/iCAN.Web/Views/Partials/Components/HeadingFeature.cshtml
+++ b/iCAN.Web/Views/Partials/Components/HeadingFeature.cshtml
@@ -20,7 +20,7 @@
 			break;
 	}
 	@if (!String.IsNullOrWhiteSpace(Model.Subtitle)) {
-		<div class="c-heading-feature__subtitle u-epsilon">
+		<div class="c-heading-feature__subtitle">
 			<p>@Model.Subtitle</p>
 		</div>
 	}
