--- a/_templates/Master.cshtml
+++ b/_templates/Master.cshtml
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" href="/assets/css/style.css">
         <script src="/assets/js/head.js"></script>
 		<link rel="stylesheet" href="https://use.typekit.net/mmc8vjo.css">
-		<link rel="shortcut icon" href="/img/favicon.png" type="image/png">
+		<link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png">
     </head>
     <body class="o-page">
 		<a href="#main" class="c-button c-button--skiplink">Skip to main content</a>
