--- a/_assets/sass/components/pagination.scss
+++ b/_assets/sass/components/pagination.scss
@@ -24,7 +24,7 @@
 
 .c-pagination__link {
 	padding: 1.5rem;
-	color: $light-1;
+	color: $grey-1;
 	display: inline-block;
 	font-weight: 900;
 	font-size: 1.8rem;
