--- a/_assets/sass/settings/global.scss
+++ b/_assets/sass/settings/global.scss
@@ -25,6 +25,8 @@ $dark-1:					#222222;
 $light-1:					#f7f5f2;
 $light-2:					darken($light-1, 5);
 
+$grey-1:					#ccc;
+
 $purple-1:					#3a113e;
 $purple-2:					#4f1c47;
 
