--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -77,6 +77,7 @@
 		'components/tabs',
 		'components/listing-card',
 		'components/heading',
+		'components/logo-links',
 		'components/sitemap';
 
 // @import 'modules/latest-news';
