--- a/iCAN.Web/Views/Master.cshtml
+++ b/iCAN.Web/Views/Master.cshtml
@@ -10,13 +10,12 @@
 
 	var hasHero = hasCarousel || hasCover;
 	var modifierClass = hasHero ? "t-has-hero js-has-hero" : "";
-@*
+
 	var secureUrl = "https://" +  Request.Url.Host.ToString() + Request.RawUrl.ToString();
     if(!HttpContext.Current.Request.IsLocal && !Request.IsSecureConnection)
     {
         Response.Redirect(secureUrl);
     }
-	*@
 }
 
 <!doctype html>
@@ -26,8 +25,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         @Html.Partial("~/Views/Partials/Meta/SEO.cshtml")
-		<link rel="stylesheet" href="/assets/css/style.ce70f9a6.css">
-        <script src="/assets/js/head.4cf2d2da.js"></script>
+		<link rel="stylesheet" href="/assets/css/style.ad890fe5.css">
+        <script src="/assets/js/head.fcc84695.js"></script>
 		<link rel="stylesheet" href="https://use.typekit.net/mmc8vjo.css">
 		<link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png">
     </head>
@@ -35,8 +34,8 @@
 		<a href="#main" class="c-button c-button--skiplink">Skip to main content</a>
         @Html.Partial("~/Views/Partials/Modules/Header.cshtml")
         @RenderBody()
-		@Html.Partial("Modules/Footer")
-        @Html.Partial("Meta/Analytics")
+		@Html.CachedPartial("~/Views/Partials/Modules/Footer.cshtml", Model, 3600)
+        @Html.CachedPartial("~/Views/Partials/Meta/Analytics.cshtml", Model, 3600)
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 		<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
