Update news listing to show 6 articles

--- a/iCAN.Web/Views/Partials/Modules/Footer.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/Footer.cshtml
@@ -26,6 +26,7 @@
 						var hasLink = link != null;
 						@Html.Partial("~/Views/Partials/Components/LogoViewModel.cshtml", new LogoViewModel {
 							Logo = item.GetPropertyValue<IPublishedContent>("logo"),
+							ImageWidth = 170,
 							Url = hasLink ? link.Url : "",
 							Target = hasLink ? link.Target : "",
 							CtaName = hasLink ? link.Name : ""
